src/objects/Motivos_Encuesta__mdt.object
<CustomObject>
    <fields>
        <fullName>Activo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Codigo_Motivo__c</fullName>
        <label>Codigo Motivo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Texto_Motivo__c</fullName>
        <label>Texto Motivo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Motivos_Encuesta</label>
    <pluralLabel>Motivos_Encuestas</pluralLabel>
</CustomObject>